// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemCounter /> renders with decrement button disabled if count=1 1`] = `
<div
  className="item-counter"
>
  <button
    className="item-counter__btn counter-btn-decrease focusable"
    disabled="disabled"
    onClick={[Function]}
    type="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="minus"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
  </button>
  <input
    className="item-counter__input focusable"
    onChange={[Function]}
    type="text"
    value={1}
  />
  <button
    className="item-counter__btn counter-btn-increase focusable"
    onClick={[Function]}
    type="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="plus"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
  </button>
</div>
`;

exports[`<ItemCounter /> renders with decrement button enabled if count is 2 (i.e. greater than 1) 1`] = `
<div
  className="item-counter"
>
  <button
    className="item-counter__btn counter-btn-decrease focusable"
    disabled=""
    onClick={[Function]}
    type="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="minus"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
  </button>
  <input
    className="item-counter__input focusable"
    onChange={[Function]}
    type="text"
    value={2}
  />
  <button
    className="item-counter__btn counter-btn-increase focusable"
    onClick={[Function]}
    type="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="plus"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
  </button>
</div>
`;
